docs/rate-limit/generic-key/rlc-vs-route.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - exact: /all-pets
      options:
        prefixRewrite: /api/pets
        rateLimitConfigs:
          refs:
          - name: my-rate-limit-policy
            namespace: gloo-system
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
